AWS/network/cloudformation/addSecGrps.json
{
  "AWSTemplateFormatVersion": "2010-09-09",

  "Description": "Template to create the Security Groups for the infrastructure.",

  "Metadata": {
      "Version": "1.0",
      "LastUpdated": "2017-11-20",
      "UpdatedBy": "Jim Lentz (jlentz@trace3.com)"
  },

  "Parameters" : {
    "vId" : {
      "Type" : "String",
      "Description" : "VpcId of the existing Virtual Private Cloud (VPC)"
    },
    "AdminCidr" : {
      "Type" : "String",
      "Description" : "Internal CIDR block used for management activities"
    },
    "Environment" : {
      "Type" : "String",
      "Description" : "Environment tag"
    },
    "Project" : {
      "Type" : "String",
      "Description" : "Project tag"
    },
    "EnvStack" : {
      "Type" : "String",
      "Description" : "Stack tag"
    }
  },

  "Resources" : {
    "AdmTierSg" : {
      "Type" : "AWS::EC2::SecurityGroup",
      "Properties" : {
        "GroupDescription" : "Security Group for the admin tier",
        "VpcId" : { "Ref" : "vId" },
      "Tags" : [
          { "Key" : "Environment", "Value" : { "Ref": "Environment" } },
          { "Key" : "Name", "Value" :  { "Fn::Join" : ["-", [ { "Ref" : "Project" }, { "Ref" : "EnvStack" }, "adm", "sg" ]] } }
        ]
      }
    },
	"WebVIPTierSg" : {
      "Type" : "AWS::EC2::SecurityGroup",
      "Properties" : {
        "GroupDescription" : "Security Group for the web VIP tier",
        "VpcId" : { "Ref" : "vId" },
      "Tags" : [
          { "Key" : "Environment", "Value" : { "Ref": "Environment" } },
          { "Key" : "Name", "Value" :  { "Fn::Join" : ["-", [ { "Ref" : "Project" }, { "Ref" : "EnvStack" }, "webVIP", "sg" ]] } }
        ]
      }
    },    
    "WebTierSg" : {
      "Type" : "AWS::EC2::SecurityGroup",
      "Properties" : {
        "GroupDescription" : "Security Group for the web tier",
        "VpcId" : { "Ref" : "vId" },
      "Tags" : [
          { "Key" : "Environment", "Value" : { "Ref": "Environment" } },
          { "Key" : "Name", "Value" :  { "Fn::Join" : ["-", [ { "Ref" : "Project" }, { "Ref" : "EnvStack" }, "web", "sg" ]] } }
        ]
      }
    },    
    "AppTierSg" : {
      "Type" : "AWS::EC2::SecurityGroup",
      "Properties" : {
        "GroupDescription" : "Security Group for the app tier",
        "VpcId" : { "Ref" : "vId" },
      "Tags" : [
          { "Key" : "Environment", "Value" : { "Ref": "Environment" } },
          { "Key" : "Name", "Value" :  { "Fn::Join" : ["-", [ { "Ref" : "Project" }, { "Ref" : "EnvStack" }, "app", "sg" ]] } }
        ]
      }
    },

    "InboundRule1" : {
      "Type": "AWS::EC2::SecurityGroupIngress",
      "Properties":{
        "IpProtocol": "tcp",
        "FromPort": "80",
        "ToPort": "80",
        "CidrIp": "10.244.128.0/21",
        "GroupId": { "Fn::GetAtt": [ "WebTierSg", "GroupId" ] }
      }
    },
	"InboundRule2" : {
      "Type": "AWS::EC2::SecurityGroupIngress",
      "Properties":{
        "IpProtocol": "tcp",
        "FromPort": "443",
        "ToPort": "443",
        "CidrIp": "10.244.128.0/21",
        "GroupId": { "Fn::GetAtt": [ "WebTierSg", "GroupId" ] }
      }
    },
    "InboundRule3" : {
      "Type": "AWS::EC2::SecurityGroupIngress",
      "Properties":{
        "IpProtocol": "tcp",
        "FromPort": "80",
        "ToPort": "80",
        "CidrIp": "10.244.128.0/21",
        "GroupId": { "Fn::GetAtt": [ "AppTierSg", "GroupId" ] }
      }
    },
    "InboundRule4" : {
      "Type": "AWS::EC2::SecurityGroupIngress",
      "Properties":{
        "IpProtocol": "tcp",
        "FromPort": "80",
        "ToPort": "80",
        "CidrIp": "10.244.128.0/21",
        "GroupId": { "Fn::GetAtt": [ "WebVIPTierSg", "GroupId" ] }
      }
    },
	"InboundRule5" : {
      "Type": "AWS::EC2::SecurityGroupIngress",
      "Properties":{
        "IpProtocol": "tcp",
        "FromPort": "443",
        "ToPort": "443",
        "CidrIp": "10.244.128.0/21",
        "GroupId": { "Fn::GetAtt": [ "WebVIPTierSg", "GroupId" ] }
      }
    },
    "InboundRule6" : {
      "Type": "AWS::EC2::SecurityGroupIngress",
      "Properties":{
        "IpProtocol": "tcp",
        "FromPort": "443",
        "ToPort": "443",
        "CidrIp": "10.31.96.0/20",
        "GroupId": { "Fn::GetAtt": [ "AdmTierSg", "GroupId" ] }
      }
    },
	"InboundRule7" : {
      "Type": "AWS::EC2::SecurityGroupIngress",
      "Properties":{
        "IpProtocol": "tcp",
        "FromPort": "80",
        "ToPort": "80",
        "CidrIp": "10.31.96.0/20",
        "GroupId": { "Fn::GetAtt": [ "AdmTierSg", "GroupId" ] }
      }
    },
	"InboundRule8" : {
      "Type": "AWS::EC2::SecurityGroupIngress",
      "Properties":{
        "IpProtocol": "tcp",
        "FromPort": "22",
        "ToPort": "22",
        "CidrIp": "10.31.96.0/20",
        "GroupId": { "Fn::GetAtt": [ "AdmTierSg", "GroupId" ] }
      }
    },
	"InboundRule9" : {
      "Type": "AWS::EC2::SecurityGroupIngress",
      "Properties":{
        "IpProtocol": "tcp",
        "FromPort": "443",
        "ToPort": "443",
        "CidrIp": "10.91.96.0/20",
        "GroupId": { "Fn::GetAtt": [ "AdmTierSg", "GroupId" ] }
      }
    },
	"InboundRule10" : {
      "Type": "AWS::EC2::SecurityGroupIngress",
      "Properties":{
        "IpProtocol": "tcp",
        "FromPort": "80",
        "ToPort": "80",
        "CidrIp": "10.91.96.0/20",
        "GroupId": { "Fn::GetAtt": [ "AdmTierSg", "GroupId" ] }
      }
    },
	"InboundRule11" : {
      "Type": "AWS::EC2::SecurityGroupIngress",
      "Properties":{
        "IpProtocol": "tcp",
        "FromPort": "22",
        "ToPort": "22",
        "CidrIp": "10.91.96.0/20",
        "GroupId": { "Fn::GetAtt": [ "AdmTierSg", "GroupId" ] }
      }
    },
    "InboundRule12" : {
      "Type": "AWS::EC2::SecurityGroupIngress",
      "Properties":{
        "IpProtocol": "icmp",
        "FromPort": "8",
        "ToPort": "-1",
        "CidrIp": "10.244.128.0/21",
        "GroupId": { "Fn::GetAtt": [ "AppTierSg", "GroupId" ] }
      }
    },
    "InboundRule13" : {
      "Type": "AWS::EC2::SecurityGroupIngress",
      "Properties":{
        "IpProtocol": "icmp",
        "FromPort": "8",
        "ToPort": "-1",
        "CidrIp": "10.244.128.0/21",
        "GroupId": { "Fn::GetAtt": [ "AdmTierSg", "GroupId" ] }
      }
    },
	"InboundRule14" : {
      "Type": "AWS::EC2::SecurityGroupIngress",
      "Properties":{
        "IpProtocol": "icmp",
        "FromPort": "8",
        "ToPort": "-1",
        "CidrIp": "10.244.128.0/21",
        "GroupId": { "Fn::GetAtt": [ "WebTierSg", "GroupId" ] }
      }
    }
  },

  "Outputs" : {
    "VPCID": {
        "Description": "VPC ID of the newly created VPC",
        "Value": { "Ref": "vId" }
    },
    "AdmSgId": {
        "Description": "ID of the newly created security group",
        "Value": { "Ref": "AdmTierSg" }
    },
    "WebSgId": {
        "Description": "ID of the newly created security group",
        "Value": { "Ref": "WebTierSg" }
    },
	"WebVipSgId": {
        "Description": "ID of the newly created security group",
        "Value": { "Ref": "WebVIPTierSg" }
    },
    "AppSgId": {
        "Description": "ID of the newly created security group",
        "Value": { "Ref": "AppTierSg" }
    }
  }
}
